# MyPractice

./: .gitignore  README.md
Go/OAuth2/: README.md  main.go
Go/all_kinds_of_practice/: go.mod
Go/blog/: .gitignore  cron.go  go.mod  go.sum  main.go
Go/rabbitmq/: go.mod  mainSimplePublish.go
Haskell/basis/: CHANGELOG.md  basis.cabal
Haskell/type-learning/: CHANGELOG.md  typeLearn.cabal
Python/newtown's Method/: basic.py  improve.py
Python/stack/: newmaker.py  raw.txt
c/best_practice/: CMakeLists.txt  Simulator.c  (+1 more)
cpp/basic/cmake_test/: CMakeLists.txt
cpp/basic/cmake_test/include/static/: Hello.h
cpp/basic/cmake_test/src/: Hello.cpp
rs/basic/: Cargo.toml
rs/basic/async/async_basic/: Cargo.toml
rs/basic/async/async_basic/src/: main.rs
rs/basic/channel/: Cargo.toml
rs/basic/channel/src/: main.rs
rs/basic/closure/src/: fn_trait.rs  lib.rs  main.rs
rs/basic/common_concept/src/: const_expression.rs  main.rs
rs/basic/condition_variable/: Cargo.toml
rs/basic/condition_variable/src/: main.rs
rs/basic/enums/: Cargo.toml
rs/basic/enums/src/: main.rs  size.rs  size_of_enum.rs
rs/basic/error/: Cargo.toml
rs/basic/error/src/: compose_error.rs  error_test1.rs  main.rs  question_mark_main.rs
rs/basic/generic/: Cargo.toml
rs/basic/generic/src/: lib.rs  main.rs
rs/basic/guessing_game/: Cargo.toml
rs/basic/guessing_game/src/: main.rs
rs/basic/hashmap/: Cargo.toml
rs/basic/hashmap/src/: main.rs
rs/basic/iterator/: Cargo.toml
rs/basic/iterator/src/: lib.rs  main.rs
rs/basic/macros/src/: declarative.rs  lib.rs
rs/basic/mingrep/: Cargo.toml
rs/basic/mingrep/src/: lib.rs
rs/basic/mutex/src/: main.rs
rs/basic/oop/src/: lib.rs  main.rs
rs/basic/ownership/: Cargo.toml
rs/basic/ownership/src/: function_and_parameter_ownership.rs  main.rs
rs/basic/pattern_and_match/: Cargo.toml
rs/basic/pattern_and_match/src/: lib.rs
rs/basic/slice/src/: main.rs
rs/basic/smartpointer/Box/: Cargo.toml
rs/basic/smartpointer/Box/src/: main.rs
rs/basic/smartpointer/Rc/: Cargo.toml
rs/basic/smartpointer/Rc/src/: main.rs
rs/basic/smartpointer/RefCell/: Cargo.toml
rs/basic/smartpointer/RefCell/src/: lib.rs  main.rs
rs/basic/smartpointer/memory_leak/: Cargo.toml
rs/basic/smartpointer/memory_leak/src/: main.rs
rs/basic/string/src/: cow.rs  main.rs
rs/basic/struct_base/: Cargo.toml
rs/basic/struct_base/src/: basic.rs  main.rs
rs/basic/thread/: Cargo.toml
rs/basic/thread/src/: main.rs
rs/basic/tips/: Cargo.toml
rs/basic/tips/src/: main.rs
rs/basic/unsafe_rust/: Cargo.toml
rs/basic/unsafe_rust/macros/: Cargo.toml
rs/basic/unsafe_rust/macros/hello_macro/: Cargo.toml
rs/basic/unsafe_rust/macros/hello_macro/hello_macro_derive/: Cargo.toml
rs/basic/unsafe_rust/macros/hello_macro/hello_macro_derive/src/: lib.rs
rs/basic/unsafe_rust/macros/src/: lib.rs  main.rs
rs/basic/unsafe_rust/src/: main.rs
rs/basic/vector/: Cargo.toml
rs/basic/vector/src/: lib.rs  main.rs  some_test.rs
rs/basic/web_server/: Cargo.toml
rs/basic/web_server/src/: lib.rs
(+334 files in other folders)
