[package]
name = "macros"
version = "0.1.0"
authors = ["YangKian <45479280+YangKian@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro = { path = "../hello_macro" }
hello_macro_derive = { path = "../hallo_macro/hello_macro_derive" }
